# keprep

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylint.ini  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements_dev.txt  scent.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codecov-report.yml  github-actions.yml  main.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
docs/about/: license.md
keprep/: __about__.py  __init__.py  __main__.py  config.py
keprep/cli/: cli.py  gui.py
keprep/interfaces/: bids.py  mrtrix3.py
keprep/tests/: test_utils.py
keprep/workflows/anatomical/: post_smriprep.py
keprep/workflows/base/: messages.py  workflow.py
keprep/workflows/dwi/: workflow.py
keprep/workflows/dwi/stages/: coregister.py  derivatives.py  eddy.py  extract_b0.py  post_eddy.py  tractography.py
src/keprep/: __init__.py  cli.py  config.py
src/keprep/data/: boilerplate.bib  keprep.json
src/keprep/data/quality_assurance/: reports.py
src/keprep/data/quality_assurance/templates/: reports-spec copy.yml  reports-spec.yml
src/keprep/interfaces/: bids.py  mrtrix3.py
src/keprep/interfaces/bids/: __init__.py  bids.py  utils.py
src/keprep/interfaces/data/: keprep.json
src/keprep/interfaces/reports/: __init__.py  reports.py
src/keprep/workflows/anatomical/: post_smriprep.py
src/keprep/workflows/base/: messages.py  workflow.py
src/keprep/workflows/dwi/: utils.py  workflow.py
src/keprep/workflows/dwi/descriptions/: base.py  coregister.py  eddy.py  post_eddy.py
src/keprep/workflows/dwi/stages/: coregister.py  derivatives.py  eddy.py  post_eddy.py  tractography.py
tests/: __init__.py  conftest.py  test_cli.py  test_keprep.py
tests/config/: test_config.py
tests/data/: bids_filters.json
tests/data/bids_test/: CHANGES  README  dataset_description.json  participants.json  participants.tsv
tests/data/bids_test/sub-test/ses-test/: sub-test_ses-test_scans.tsv
tests/data/bids_test/sub-test/ses-test/anat/: sub-test_ses-test_FLAIR.json  sub-test_ses-test_ce-corrected_T1w.json  sub-test_ses-test_ce-uncorrected_T1w.json  sub-test_ses-test_ce-uncorrected_T2w.json
tests/data/bids_test/sub-test/ses-test/dwi/: sub-test_ses-test_dir-AP_dwi.bvec  sub-test_ses-test_dir-AP_dwi.json  sub-test_ses-test_dir-AP_dwi_heudiconv753.bval  sub-test_ses-test_dir-AP_dwi_heudiconv753.json  sub-test_ses-test_dir-PA_dwi.bval  sub-test_ses-test_dir-PA_dwi.bvec  sub-test_ses-test_dir-PA_dwi.json
tests/data/work/20240807-205921_4c145c23-8ce0-42e9-bca7-2832a33c5a8a/bids_db/: layout_index.sqlite
tests/workflows/: test_anatomical.py  test_base.py
