[tool.poetry]

name = "KePrep"
version = "0.0"
description = "Minimally preprocessing TheBase dMRI data."

packages = [{ include = "keprep" }]

license = "MIT"
authors = ["Gal Kepler <galkepler@gmail.com>"]

readme = "README.md"
homepage = "https://pypi.org/project/KePrep"
documentation = "https://KePrep.readthedocs.io"
repository = "https://github.com/GalKepler/keprep"

keywords = []
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]

python = "^3.10"

# TODO: Remove these and add your library's requirements
click = "*"
minilog = "*"
nipype = "^1.8.6"
templateflow = "^23.0.0"
psutil = "^5.9.5"
niworkflows = "^1.8.1"
pre-commit = "^3.3.3"
pyupgrade = "^3.9.0"
toml = "^0.10.2"
smriprep = "^0.12.1"
sdcflows = "^2.5.1"

[tool.poetry.dev-dependencies]

# Formatters
black = "^24.4"
tomli = "*"     # missing 'black' dependency
isort = "^5.13"

# Linters
mypy = "^1.0"
pydocstyle = "^6.1"
pylint = "~2.15"
wrapt = "*"         # missing 'pylint' dependency

# Testing
pytest = "^7.3"
pytest-describe = "^2.0"
pytest-expecter = "^3.0"
pytest-random = "*"
pytest-cov = "^4.1"
freezegun = "*"

# Reports
coveragespace = "^6.0"

# Documentation
mkdocs = "~1.3"
pygments = "^2.11.1"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
ipython = "^7.12.0"

[tool.poetry.scripts]

KePrep = "keprep.cli:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]

addopts = """
--strict-markers

-r sxX
--show-capture=log

--cov-report=html
--cov-report=term-missing:skip-covered
--no-cov-on-fail
"""

cache_dir = ".cache/pytest/"

markers = []

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
