[tool.poetry]
name = "keprep"
version = "0.1.1"
description = "Minimally preprocessing TheBase dMRI data."
authors = ["Gal Kepler <galkepler@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://pypi.org/project/KePrep"
repository = "https://github.com/GalKepler/keprep"
documentation = "https://KePrep.readthedocs.io"
keywords = ["neuroscience", "MRI", "data processing", "automation", "standardization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.dependencies]
python = "^3.10"
nipype = "^1.8.6"
templateflow = "^23.0.0"
psutil = "^5.9.5"
niworkflows = "^1.8.1"
pre-commit = "^3.3.3"
pyupgrade = "^3.9.0"
toml = "^0.10.2"
smriprep = "^0.12.1"
sdcflows = "^2.5.1"
tox = "^4.16.0"

[tool.poetry.dev-dependencies]
coverage = "^7.5.4"  # testing
mypy = "^1.10.0"  # linting
pytest = "^8.2.2"  # testing
ruff = "^0.4.4"  # linting
black = "^24.4.2"
flake8 = "^7.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# black configuration
[tool.black]
line-length = 88
target-version = ['py310']

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3  # This setting allows multi-line imports with parentheses
include_trailing_comma = true  # Ensures trailing commas for better diff
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Mypy configuration
[tool.mypy]
files = "."
strict = false
warn_unreachable = true
warn_no_return = true
ignore_missing_imports = true

# coverage configuration
[tool.coverage.run]
branch = true
source = [
    "src/keprep"
]

[tool.coverage.report]
omit = [
    "tests/*"
]
